--- a/components/PhotosGrid/PhotosGrid.module.css
+++ b/components/PhotosGrid/PhotosGrid.module.css
@@ -13,6 +13,6 @@
 /* Style your items */
 .mymasonrygrid_column > div {
   /* change div to reference your elements you put in <Masonry> */
-  /* background: grey; */
+  background: black;
   margin-bottom: 30px;
 }
